<resources>
    <string name="app_name">TargetApp</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_maps2">MapsActivity2</string>
    <string name="latitude">Latitude:</string>
    <string name="placeholder">placeholder</string>
    <string name="longitude">Longitude:</string>
    <string name="send_location">Send location</string>
    <string name="location_history">Location history:</string>
    <string name="date">Date:</string>
    <string name="i_could_not_find_an_account">I could not find an account stored locally, please log in or create a new account.</string>
    <string name="log_in">Log in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="unique_code">Unique code:</string>
    <string name="get_unique_code">Get unique code</string>
    <string name="don_t_have_an_account_nregister_instead">Don\'t have an account?\nRegister instead</string>
    <string name="log_out">Log Out</string>
    <string name="back">Back</string>
    <string name="your_unique_code">Your unique code:</string>
    <string name="camera_tracks_location">Camera tracks location</string>
</resources>