<?xml version="1.0" encoding="utf-8"?>

<!-- The ID's in this file should always start with
"code" to denote the activity -->

<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="15dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/your_unique_code" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/codeCodeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textIsSelectable="true"
        android:text="@string/placeholder"
        android:textSize="25sp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/codeBackB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_marginTop="20dp"/>

</androidx.appcompat.widget.LinearLayoutCompat>