<?xml version="1.0" encoding="utf-8"?>

<!-- The ID's in this file should always start with
"log" to denote the activity -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.AuthActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/logInnerRelLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/logTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/i_could_not_find_an_account"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/logLoginTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/logTV"
                android:layout_centerHorizontal="true"
                android:padding="10dp"
                android:text="@string/log_in"
                android:textAlignment="center"
                android:textSize="30sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/logEmailTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/logLoginTV"
                android:paddingHorizontal="10dp"
                android:text="@string/email"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/logEmailTIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logEmailTV"
                android:padding="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/logEmailTIET"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"
                    android:maxLength="128"
                    android:padding="10dp"
                    android:textSize="20sp"
                    android:enabled="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/logPasswordTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/logEmailTIL"
                android:paddingHorizontal="10dp"
                android:text="@string/password"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/logPasswordTIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logPasswordTV"
                android:padding="10dp"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/logPasswordTIET"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:maxLength="64"
                    android:padding="10dp"
                    android:textSize="20sp"
                    android:enabled="false" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/logLoginB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/logPasswordTIL"
                android:layout_centerHorizontal="true"
                android:padding="10dp"
                android:text="@string/log_in"
                android:textSize="20sp"
                android:enabled="false" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/logRegisterB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/logLoginB"
                android:layout_centerHorizontal="true"
                android:padding="10dp"
                android:text="@string/don_t_have_an_account_nregister_instead"
                android:textSize="20sp"
                android:enabled="false" />

        </RelativeLayout>

    </ScrollView>

</LinearLayout>