<?xml version="1.0" encoding="utf-8"?>

<!-- The ID's in this file should always start with
"reg" to denote the activity -->

<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" >
            
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/regRegisterTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:padding="10dp"
                android:text="@string/register"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textIsSelectable="true" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/regEmailRegisterTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/regRegisterTV"
                android:paddingHorizontal="10dp"
                android:text="@string/email"
                android:textSize="20sp"
                android:textIsSelectable="true" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/regEmailRegisterTIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/regEmailRegisterTV"
                android:paddingHorizontal="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/regEmailRegisterTIET"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"
                    android:maxLength="128"
                    android:padding="10dp"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/regNameRegisterTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/regEmailRegisterTIL"
                android:paddingHorizontal="10dp"
                android:text="@string/name"
                android:textSize="20sp"
                android:textIsSelectable="true" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/regNameRegisterTIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/regNameRegisterTV"
                android:paddingHorizontal="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/regNameRegisterTIET"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPersonName"
                    android:maxLength="64"
                    android:padding="10dp"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/regPasswordRegisterTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/regNameRegisterTIL"
                android:paddingHorizontal="10dp"
                android:text="@string/password"
                android:textSize="20sp"
                android:textIsSelectable="true" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/regPasswordRegisterTIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/regPasswordRegisterTV"
                android:paddingHorizontal="10dp"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/regPasswordRegisterTIET"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:maxLength="64"
                    android:padding="10dp"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/regRegisterB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/regPasswordRegisterTIL"
                android:layout_centerHorizontal="true"
                android:paddingHorizontal="10dp"
                android:text="@string/register"
                android:textSize="20sp" />
        </RelativeLayout>

    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>